Update company name

--- a/about/index.html
+++ b/about/index.html
@@ -118,7 +118,7 @@
 
           <h2>Adres</h2>
 
-          <p>Dovadi Management<br />
+          <p>Praktijk Dovadi<br />
             Lekerwaard 112<br />
             1824 HE Alkmaar<br />
             Kvk: 37127627<br /></p>
