Add VAT number as well

--- a/about/index.html
+++ b/about/index.html
@@ -121,7 +121,8 @@
           <p>Praktijk Dovadi<br />
             Lekerwaard 112<br />
             1824 HE Alkmaar<br />
-            Kvk: 37127627<br /></p>
+            Kvk: 37127627<br />
+            BTW NL001563681B92<br /></p>
 
 
         </article>
