Some small changes in about page

--- a/about/index.html
+++ b/about/index.html
@@ -92,13 +92,13 @@
 
           <p>We&#8217;re specialized in web applications build with <a href="http://www.rubyonrails.org">Ruby on
               Rails</a>. We practice agile development techniques in order to deliver prototypes, proof-of-concepts and
-            high quality products. Dovadi was <a href="http://rubyenrails.nl/">co-organizer</a> of the Ruby and Rails
+            high quality products. Dovadi was co-organizer of the Ruby and Rails
             conference in Amsterdam 2007. We share our knowledge through open sourcing our <a
               href="https://github.com/dovadi">libraries</a> (if possible) and through in-company workshops. Dovadi was
-            an active sponsor of the Dutch <a href="http://www.fablab.nl">Fablab</a> community and initiated <a
-              href="http://rubycoop.org">Ruby Co-op</a>.</p>
+            an active sponsor of the Dutch <a href="http://www.fablab.nl">Fablab</a> community and initiated Ruby Co-op.
+          </p>
 
-          <p>The most recent open source project an energy monitor <a href="https://observi.nl">Observi</a> with the
+          <p>The most recent open source project, an energy monitor Observi with the
             Ginkgo energy gateway, which was launched in May 2013.</p>
 
           <h2>Clients</h2>
@@ -118,7 +118,7 @@
 
           <h2>Adres</h2>
 
-          <p>Praktijk Dovadi<br />
+          <p><a href="https://frankoxener.nl">Praktijk Dovadi</a><br />
             Lekerwaard 112<br />
             1824 HE Alkmaar<br />
             Kvk: 37127627<br />
