Save without autoformat

--- a/about/index.html
+++ b/about/index.html
@@ -90,8 +90,8 @@
 
           <h1>Dovadi</h1>
 
-          <p>We&#8217;re specialized in web applications build with <a href="http://www.rubyonrails.org">Ruby on
-              Rails</a>. We practice agile development techniques in order to deliver prototypes, proof-of-concepts and
+          <p>We&#8217;re specialized in web applications build with <a href="http://www.rubyonrails.org">Ruby on Rails</a>.
+            We practice agile development techniques in order to deliver prototypes, proof-of-concepts and
             high quality products. Dovadi was co-organizer of the Ruby and Rails
             conference in Amsterdam 2007. We share our knowledge through open sourcing our <a
               href="https://github.com/dovadi">libraries</a> (if possible) and through in-company workshops. Dovadi was
