--- a/about/index.html
+++ b/about/index.html
@@ -23,6 +23,7 @@
   <link rel="canonical" href="http://dovadi.com/about/">
   <link href="/favicon.png" rel="icon">
   <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
+  <script defer data-domain="dovadi.com" src="https://plausible.io/js/script.js"></script>
   <script src="/javascripts/modernizr-2.0.js"></script>
   <script src="/javascripts/ender.js"></script>
   <script src="/javascripts/octopress.js" type="text/javascript"></script>
