--- a/about/index.html
+++ b/about/index.html
@@ -91,7 +91,8 @@
 
           <h1>Dovadi</h1>
 
-          <p>We&#8217;re specialized in web applications build with <a href="http://www.rubyonrails.org">Ruby on Rails</a>.
+          <p>We&#8217;re specialized in web applications build with <a href="http://www.rubyonrails.org">Ruby on
+              Rails</a>.
             We practice agile development techniques in order to deliver prototypes, proof-of-concepts and
             high quality products. Dovadi was co-organizer of the Ruby and Rails
             conference in Amsterdam 2007. We share our knowledge through open sourcing our <a
@@ -211,7 +212,7 @@
   </div>
   <footer role="contentinfo">
     <p>
-      Copyright &copy; 2023 - Frank Oxener -
+      <script>document.write(new Date().getFullYear())</script> - Frank Oxener -
       <span class="credit">Powered by <a href="http://octopress.org">Octopress</a>. Design by <a
           href="http://octopressthemes.com">Octopress Themes</a>.</span>
     </p>
@@ -226,13 +227,13 @@
 
 
   <script type="text/javascript">
-    (function () {
-      var twitterWidgets = document.createElement('script');
-      twitterWidgets.type = 'text/javascript';
-      twitterWidgets.async = true;
-      twitterWidgets.src = 'https://platform.twitter.com/widgets.js';
-      document.getElementsByTagName('head')[0].appendChild(twitterWidgets);
-    })();
+      (function () {
+        var twitterWidgets = document.createElement('script');
+        twitterWidgets.type = 'text/javascript';
+        twitterWidgets.async = true;
+        twitterWidgets.src = 'https://platform.twitter.com/widgets.js';
+        document.getElementsByTagName('head')[0].appendChild(twitterWidgets);
+      })();
   </script>
 
 
